<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="@dimen/dp96"
        android:layout_height="@dimen/dp96"
        android:layout_marginTop="@dimen/dp40"
        android:contentDescription="@string/foto_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_iniciar"
        android:textSize="@dimen/sp32"
        app:layout_constraintTop_toBottomOf="@id/imgLogin"
        android:layout_marginTop="@dimen/dp80"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:fontFamily="@font/catamaran_extralight"
        android:textColor="@color/colorPrimarioOscuro"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNomUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInicio"
        android:layout_margin="@dimen/dp16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_usuario"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/catamaran_extralight"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomUsuario"
        android:layout_margin="@dimen/dp16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/catamaran_extralight"
            android:hint="@string/hint_pw"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_entrar"
        app:layout_constraintTop_toBottomOf="@id/etPw"
        android:layout_marginTop="@dimen/dp96"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginLeft="@dimen/dp16"
        android:fontFamily="@font/catamaran_medium"
        android:onClick="btnEntrar"
        style="@style/HidraButton">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistrarse"
        style="@style/boton_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/catamaran_medium"
        android:onClick="btnRegistro"
        android:text="@string/btn_registro"
        android:textColor="@color/colorAcento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEntrar"
        app:strokeColor="@color/colorAcento" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>