<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp208"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="40dp"
    app:cardCornerRadius="@dimen/dp16"
    android:checkable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp96"
            android:scaleType="centerCrop"
            android:contentDescription="@string/img_tarjeta"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/sp16"
                android:layout_marginRight="@dimen/sp16">

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:fontFamily="@font/catamaran_medium"
                    android:textColor="@color/colorPrimarioOscuro"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp24"
                    />

                <TextView
                    android:id="@+id/tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deporte"
                    android:layout_weight="1"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/colorAcento"

                    android:gravity="end" />

            </LinearLayout>

            <TextView
                android:id="@+id/descripcion"
                android:layout_marginBottom="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp8"
                android:text="@string/secondary_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:fontFamily="@font/catamaran_extralight"
                />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>