<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SocialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimario"
            android:textColor="@color/colorPrimarioOscuro"
            android:text="@string/social"
            android:padding="@dimen/dp8"
            android:fontFamily="@font/catamaran_medium"
            android:textSize="@dimen/sp32">
        </TextView>
        <LinearLayout
            android:id="@+id/llExplora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp8"
            android:background="@color/colorPrimario"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAyudaS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ayuda"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp8"
                android:fontFamily="@font/catamaran_medium"
                style="@style/HidraButton">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCrearS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crear"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_marginStart="@dimen/dp8"
                app:layout_constraintTop_toBottomOf="@id/etPw"
                android:fontFamily="@font/catamaran_medium"
                style="@style/boton_crear">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExploraS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explora"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp8"
                app:layout_constraintTop_toBottomOf="@id/etPw"
                android:fontFamily="@font/catamaran_medium"
                style="@style/HidraButton">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExplora"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </LinearLayout>


</FrameLayout>